# sclang-format

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  disable-antlr-tests.patch
.github/workflows/: build.yml
src/: CMakeLists.txt  sclang-format.cpp
